# Jedi-Py-MCP

./: .ai-doc-audit.md  .gitignore  AGENTS.md  CHANGELOG.md  CI_POLICY.md  CLAUDE.md  PRIVACY.md  README.md  build.bat  justfile  manifest.json  mcp.json  pyproject.toml  pyrightconfig.json  python-refactor-mcp.spec  requirements.txt
.claude/: settings.json  settings.local.json
.cursor/: mcp.json
.cursor/rules/: operational-essentials.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai_docs/: README.md  architecture.md  audit-code-review.md  audit-mcp-server.md  backlog.md  best_practices_analysis.md  planning_index.md  quickstart.md  runtime.md  uncovered_features.md  workflow.md
ai_docs/archive/: README.md  p0_p3_findings_implementation.md  python-refactor-mcp-prompt.md  quickstart.md
ai_docs/domains/python-refactor/: mcp-checklist.md  mcp-compliance-plan.md  next10-implementation-plan.md  next10-wave2-plan.md  reference.md
ai_docs/procedures/: release-handoff.md
ai_docs/prompts/: deep-review-refactor.md
ai_docs/references/: mcp_best_practices.md  testing.md
ai_docs/references/tooling/: python.md
ai_docs/reports/: code-review-report.md  mcp-server-audit-report.md
docs/: README.md  setup.md  tool-reference.md  usage.md
scripts/: build.ps1  test-integration.ps1
src/python_refactor_mcp/: __init__.py  __main__.py  config.py  errors.py  models.py  server.py  workspace_registry.py
src/python_refactor_mcp/backends/: __init__.py  jedi_backend.py  pyright_lsp.py  rope_backend.py
src/python_refactor_mcp/tools/: analysis.py  composite.py  navigation.py  refactoring.py  search.py
src/python_refactor_mcp/tools/analysis/: __init__.py  _protocols.py  completions.py  diagnostics.py  jedi_extras.py  references.py  static_errors.py  tokens.py  type_info.py  type_stubs.py  type_users.py
src/python_refactor_mcp/tools/metrics/: __init__.py  architecture.py  complexity.py  coverage.py  dependencies.py  duplicates.py  security.py  test_map.py  unused.py
src/python_refactor_mcp/tools/navigation/: __init__.py  _protocols.py  definitions.py  hierarchy.py  outline.py  public_api.py
src/python_refactor_mcp/tools/refactoring/: __init__.py  code_actions.py  extract.py  format.py  helpers.py  imports.py  lint_fix.py  rename.py  signature.py  structure.py  type_annotations.py
src/python_refactor_mcp/tools/search/: __init__.py  (+6 more)
src/python_refactor_mcp/util/: __init__.py  cst_apply.py  diff.py  file_filter.py  lsp_client.py  lsp_converters.py  lsp_types.py  paths.py  python_detect.py  shared.py  subprocess_mgr.py  timing.py
tests/: conftest.py  helpers.py
tests/contract/: test_mcp_protocol.py
tests/integration/: __init__.py  conftest.py  test_end_to_end.py
tests/unit/: test_analysis_tools.py  test_composite_tools.py  test_config.py  test_cst_apply.py  test_jedi_backend.py  test_models.py  test_navigation_tools.py  test_pyright_lsp.py  test_refactoring_tools.py  test_rope_backend.py  test_search_tools.py  test_server.py  test_shared_utils.py  test_workspace_registry.py
(+6 files in other folders)
